# pybpr

./: *  .env  .envrc  =3.10  README.md  README.rst  bpr_module.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg
bpr/: cfbase.py
count_model/: count_data.py  count_model.py  destination_counter.py  link_count_data.py  link_counter.py  permutation_counter.py  sequence_counter.py  source_data.py  uniform_prior_model.py  uniform_prior_probability_model.py  uniform_prior_z_model.py  window_counter.py
examples/: als_movielens.ipynb  als_simple.ipynb  bpr_hyperparameters_ml_run.py  bpr_movielens.ipynb  bpr_movielens_debug.ipynb  bpr_netflix.ipynb  bpr_simple.ipynb  bpr_zazzle.ipynb  bpr_zazzle_debug.ipynb  check_bpr.ipynb  compare_wals.py  config.yaml  count_model_movielens.ipynb  count_model_movielens.ipynb.0fe61b20bc7114b184790e37cf7c9af0.tmp  demo_example.py  eagle_script.sh  hero_check.ipynb  hero_ml_model_reg.ipynb  kestrel_script.sh  lightfm_check.ipynb  lightfm_netflix.ipynb  lightfm_simpl.ipynb  ml_run.py  mlflow_plotter.ipynb  mlflow_plotter_demo.ipynb  movielens_example.py  movielens_example_hero.py  movielens_run.ipynb  movielens_run.py  train_with_hero.py  wals-als-svd_movielens.ipynb  wals_hyperparameters_ml.ipynb  wals_hyperparameters_ml_run.py  wals_movielens.ipynb  wals_simple.ipynb  weighting_strategies.ipynb  zazzle_plotting.ipynb  zazzle_process_data.ipynb  zazzle_run.py  zazzle_run_bpr.ipynb  (+4 more)
examples/mlruns/0/: meta.yaml
examples/old_nbs/: bpr_simple.ipynb
notebooks/: Untitled.ipynb  Untitled1.ipynb  als_movielens.ipynb  als_simple.ipynb  bpr_hyperparameters_ml.ipynb  bpr_movielens_debug.ipynb  download_data.ipynb  lightfm_check.ipynb  lightfm_movielens-10m.ipynb  lightfm_simpl.ipynb  movielens-10m.ipynb  process_results.ipynb  zazzle_plotting.ipynb  zazzle_process_data.ipynb  zazzle_run_bpr.ipynb  zazzle_run_bpr_big.ipynb  zazzle_run_bpr_timed.ipynb
pybpr/: __init__.py  als.py  bpr.py  bpr_module.py  cfbase.py  dataset.py  hybrid_mf.py  interaction_data.py  interactions.py  losses.py  matrix_factorization.py  movielens_downloader.py  movielens_loader.py  pipeline.py  plotter.py  rec_system.py  recommender.py  sampling.py  svds.py  ui_data.py  utils.py
tests/: test_bpr.py
