[metadata]
name = pybpr
version = 0.0.1
license = BSD 3-Clause License
license_file = LICENSE.txt
# keywords = 
description = Suite of Bayesian algorithms
long_description = file: README.rst
author = Rimple Sandhu
author_email = rimple.sandhu@nrel.gov
# url = https://github.com/NREL/SSRS
platforms = any
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
[options]
packages = find:
include_package_data = True
install_requires =
    matplotlib>=3.4
    numpy>=1.21
    scipy>=1.7
    pandas>=1.3
    pathos>=0.2
python_requires = >=3.12
[options.packages.find]
where = pybpr
exclude =
    tests*
    .gitignore

